fixed navbar dark mode toggle and added user select none while resizing

--- a/src/index.css
+++ b/src/index.css
@@ -254,6 +254,11 @@
     fill: black;
     transition: fill 1s ease;
   }
+
+  /* .monaco-editor {
+    --vscode-focusBorder: #FFF !important;
+  } */
+
 }
 
 @theme {
